<resources>
    <string name="app_name">LivePK</string>
    <string name="cmm_tip">Tip</string>
    <string name="cmm_ok">OK</string>
    <string name="cmm_cancel">Cancel</string>
    <string name="cmm_create">Create</string>

    <string name="room_list_title">Room List</string>
    <string name="room_list_no_data_hint">Please Create a Room</string>
    <string name="room_list_fail_to_obtain_data_hint">Loading Data failed, please try later</string>
    <string name="room_list_network_error_title">Network failure</string>
    <string name="room_list_network_error_message">The network connection is not available, please try later.</string>

    <string name="room_create_title">Create Room</string>
    <string name="room_create_dialog_inpit_hint">Room Name</string>

    <string name="error_leak_permission">Need corresponding permissions, please open firstly.</string>

    <string name="room_create_dialog_title">Create Room</string>

    <!-- Live Prepare Activity -->
    <string name="live_prepare_hint">Channel Name</string>
    <string name="go_live_text">Go Live</string>
    <string name="live_prepare_name_too_long_toast_format">Room name cannot be longer than %d characters</string>
    <string name="live_prepare_no_room_name">Please enter your room name</string>
    <string name="no_fu_auth_notice">No FaceUnity authentication found</string>

    <!-- Policies -->
    <string name="live_prepare_room_restriction">This is a testing product. Please refrain from using it commercially. The max duration per session is 10 minutes, and the max number of participants per channel is 10. </string>
    <string name="live_prepare_mode_direct_cdn" translatable="false">客户端\n直推模式</string>
    <string name="live_prepare_mode_rtc" translatable="false">服务端\n旁推模式</string>


    <string-array name="random_channel_names">
        <item>Cheer</item>
        <item>Vibe</item>
        <item>Devine</item>
        <item>Duo</item>
        <item>Ablaze</item>
        <item>Amaze</item>
        <item>Harmony</item>
        <item>Verse</item>
        <item>Vigilant</item>
        <item>Contender</item>
        <item>Vista</item>
        <item>Wander</item>
        <item>Collections</item>
        <item>Moon</item>
        <item>Boho</item>
        <item>Everest</item>
    </string-array>

    <string name="live_room_all_online_user_action_sheet_title">Member Listing</string>
    <string name="live_room_online_user_invite_call_btn">Invite</string>

    <string name="live_room_tool_action_sheet_title">Tool</string>
    <string-array name="live_room_action_sheet_tool_names">
        <item>Rotate</item>
        <item>Speaker</item>
    </string-array>


    <!-- My Profile Fragment -->
    <string name="profile_item_title_avatar">Profile</string>
    <string name="profile_item_title_nickname">Nickname</string>
    <string name="about_title">About</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_website_link">https://www.agora.io/en/privacy-policy/</string>
    <string name="terms_service_title">Terms of Services</string>
    <string name="terms_service_link">https://www.agora.io/en/terms-of-service/</string>

    <string-array name="random_names">
        <item>Alexander</item>
        <item>Halley</item>
        <item>Rickey</item>
        <item>Xavior</item>
        <item>Yolanda</item>
        <item>Corynn</item>
        <item>Daniel</item>
        <item>Kelly</item>
        <item>Lauren</item>
    </string-array>

    <string-array name="random_surnames">
        <item>Atkinson</item>
        <item>Edwards</item>
        <item>Gibson</item>
        <item>Holmes</item>
        <item>Kelvin</item>
        <item>Lloyd</item>
        <item>Payne</item>
        <item>White</item>
    </string-array>

</resources>