<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/local_preview_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/prepare_top_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:paddingStart="@dimen/live_prepare_content_padding"
            android:paddingEnd="@dimen/live_prepare_content_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/live_prepare_close"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentStart="true"
                android:src="@drawable/close_button_white"
                android:layout_centerVertical="true" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/live_prepare_switch_camera"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/switch_camera_white"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/prepare_name_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/prepare_top_btn_layout"
            android:background="@drawable/room_edit_layout_bg_dark_gray"
            android:layout_marginStart="@dimen/live_prepare_content_padding"
            android:layout_marginEnd="@dimen/live_prepare_content_padding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/room_name_edit_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/prepare_padding"
                android:textColor="@color/gray_lightest"
                android:text="@string/live_prepare_hint"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/random_btn"
                android:layout_width="@dimen/button_height"
                android:layout_height="@dimen/button_height"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/prepare_padding"
                android:src="@drawable/random_button_white"
                android:scaleType="fitCenter" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/room_name_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_toStartOf="@id/random_btn"
                android:layout_toEndOf="@id/room_name_edit_hint"
                android:background="@null"
                android:gravity="center_vertical"
                android:lines="1"
                android:paddingStart="@dimen/prepare_padding"
                android:paddingEnd="@dimen/prepare_padding"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/live_prepare_bottom_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/bottom_action_margin_bottom"
            android:paddingStart="@dimen/live_prepare_content_padding"
            android:paddingEnd="@dimen/live_prepare_content_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/live_prepare_beauty_btn"
                android:layout_width="@dimen/bottom_btn_size"
                android:layout_height="@dimen/bottom_btn_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/round_dark_gray_bg"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:src="@drawable/prepare_beauty_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/live_prepare_go_live_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/bottom_btn_padding"
                android:layout_toEndOf="@id/live_prepare_beauty_btn"
                android:background="@drawable/live_action_button_bg"
                android:gravity="center"
                android:paddingStart="@dimen/start_broadcast_btn_padding"
                android:paddingEnd="@dimen/start_broadcast_btn_padding"
                android:text="@string/go_live_text"
                android:textAlignment="gravity"
                android:textColor="@color/live_action_button_text_color"
                android:textSize="@dimen/text_size_normal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/live_prepare_setting_btn"
                android:layout_width="@dimen/bottom_btn_size"
                android:layout_height="@dimen/bottom_btn_size"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/bottom_btn_padding"
                android:layout_toEndOf="@id/live_prepare_go_live_btn"
                android:background="@drawable/round_dark_gray_bg"
                android:scaleType="fitXY"
                android:visibility="gone"
                android:src="@drawable/setting_button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/live_prepare_policy_caution_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/live_prepare_bottom_button_layout"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/round_scalable_gray_bg_caution">

            <ImageView
                android:id="@+id/live_prepare_policy_close"
                android:layout_width="@dimen/live_prepare_policy_sign_size"
                android:layout_height="@dimen/live_prepare_policy_sign_size"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/live_prepare_policy_padding"
                android:layout_marginEnd="@dimen/live_prepare_policy_padding"
                android:scaleType="fitXY"
                android:src="@drawable/icon_close_gray_attention" />

            <ImageView
                android:id="@+id/live_prepare_policy_caution"
                android:layout_width="@dimen/live_prepare_policy_caution_size"
                android:layout_height="@dimen/live_prepare_policy_caution_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:scaleType="fitXY"
                android:src="@drawable/icon_caution" />

            <TextView
                android:id="@+id/live_prepare_policy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/live_prepare_policy_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/live_prepare_policy_padding"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_toStartOf="@id/live_prepare_policy_close"
                android:layout_toEndOf="@id/live_prepare_policy_caution"
                android:text="@string/live_prepare_room_restriction"
                android:textColor="@android:color/white" />
        </RelativeLayout>


        <RadioGroup
            android:id="@+id/live_prepare_mode_choice"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="160dp"
            android:layout_below="@id/prepare_name_edit_layout"
            android:paddingHorizontal="@dimen/live_prepare_content_padding"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_mode_direct_cdn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:checked="true"
                android:gravity="center_horizontal"
                android:layout_marginEnd="25dp"
                android:button="@null"
                android:paddingTop="40dp"
                android:paddingBottom="28dp"
                tools:drawableBottom="@drawable/ic_baseline_check_circle_outline_24"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:background="@drawable/sel_radio_button_live_mode"
                android:text="@string/live_prepare_mode_direct_cdn"/>

            <RadioButton
                android:id="@+id/rb_mode_rtc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:checked="true"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"
                android:paddingTop="40dp"
                android:paddingBottom="28dp"
                android:textSize="@dimen/text_size_normal"
                android:background="@drawable/sel_radio_button_live_mode"
                android:gravity="center_horizontal"
                android:button="@null"
                android:text="@string/live_prepare_mode_rtc"/>


        </RadioGroup>

    </RelativeLayout>
</layout>
