<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_background_height"
            android:background="@drawable/profile_background">

            <RelativeLayout
                android:id="@+id/profile_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="@dimen/profile_portrait_background_size"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="@dimen/profile_portrait_background_size"
                        android:layout_height="@dimen/profile_portrait_background_size"
                        android:background="@drawable/white_circle">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/user_profile_icon"
                            android:layout_width="@dimen/profile_portrait_size"
                            android:layout_height="@dimen/profile_portrait_size"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/default_portrait_white" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_profile_nickname"
                        android:layout_width="@dimen/profile_portrait_background_size"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/profile_user_nickname_margin"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_normal" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_profile_icon_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/profile_item_title_avatar"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_enter" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_divider_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/gray_lightest" />

        <RelativeLayout
            android:id="@+id/user_profile_nickname_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/profile_item_title_nickname"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_item_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_enter"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_profile_nickname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/profile_item_arrow"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                android:textSize="@dimen/text_size_normal" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_divider_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/gray_lightest" />

        <RelativeLayout
            android:id="@+id/user_profile_about_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/about_title"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_enter" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_divider_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@color/gray_lightest" />
    </LinearLayout>
</layout>